Games are stored in memory only.