@@ -1,68 +1,85 @@
 package com.github.laxika.magicalvibes.service;
 
 import com.github.laxika.magicalvibes.dto.GameResponse;
-import com.github.laxika.magicalvibes.entity.Game;
-import com.github.laxika.magicalvibes.entity.GamePlayer;
-import com.github.laxika.magicalvibes.repository.GamePlayerRepository;
-import com.github.laxika.magicalvibes.repository.GameRepository;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.stream.Collectors;
+import java.time.LocalDateTime;
+import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.atomic.AtomicLong;
 
 @Service
 @Slf4j
-@RequiredArgsConstructor
 public class GameService {
 
-    private final GameRepository gameRepository;
-    private final GamePlayerRepository gamePlayerRepository;
+    private final AtomicLong idCounter = new AtomicLong(1);
+    private final Map<Long, GameData> games = new ConcurrentHashMap<>();
 
-    @Transactional
-    public GameResponse createGame(String gameName, Long userId) {
-        log.info("Creating game '{}' for user ID: {}", gameName, userId);
+    public GameResponse createGame(String gameName, Long userId, String username) {
+        long gameId = idCounter.getAndIncrement();
 
-        Game game = new Game(gameName, userId, "WAITING");
-        game = gameRepository.save(game);
+        GameData gameData = new GameData(gameId, gameName, userId, username);
+        gameData.playerIds.add(userId);
+        games.put(gameId, gameData);
 
-        GamePlayer gamePlayer = new GamePlayer(game.getId(), userId);
-        gamePlayerRepository.save(gamePlayer);
-
-        log.info("Game created with ID: {}", game.getId());
-        return GameResponse.fromEntity(gameRepository.findById(game.getId()).orElseThrow());
+        log.info("Game created: id={}, name='{}', creator={}", gameId, gameName, username);
+        return toResponse(gameData);
     }
 
-    @Transactional(readOnly = true)
     public List<GameResponse> listRunningGames() {
-        log.debug("Listing all running games");
-        List<Game> games = gameRepository.findByStatus("WAITING");
-        return games.stream()
-                .map(GameResponse::fromEntity)
-                .collect(Collectors.toList());
+        return games.values().stream()
+                .filter(g -> "WAITING".equals(g.status))
+                .map(this::toResponse)
+                .toList();
     }
 
-    @Transactional
     public GameResponse joinGame(Long gameId, Long userId) {
-        log.info("User {} attempting to join game {}", userId, gameId);
-
-        Game game = gameRepository.findById(gameId)
-                .orElseThrow(() -> new IllegalArgumentException("Game not found"));
-
-        if (gamePlayerRepository.existsByGameIdAndUserId(gameId, userId)) {
-            throw new IllegalStateException("You are already in this game");
+        GameData gameData = games.get(gameId);
+        if (gameData == null) {
+            throw new IllegalArgumentException("Game not found");
         }
 
-        if (!"WAITING".equals(game.getStatus())) {
+        if (!"WAITING".equals(gameData.status)) {
             throw new IllegalStateException("Game is not accepting players");
         }
 
-        GamePlayer gamePlayer = new GamePlayer(gameId, userId);
-        gamePlayerRepository.save(gamePlayer);
+        if (gameData.playerIds.contains(userId)) {
+            throw new IllegalStateException("You are already in this game");
+        }
 
-        log.info("User {} successfully joined game {}", userId, gameId);
-        return GameResponse.fromEntity(gameRepository.findById(gameId).orElseThrow());
+        gameData.playerIds.add(userId);
+        log.info("User {} joined game {}", userId, gameId);
+        return toResponse(gameData);
+    }
+
+    private GameResponse toResponse(GameData data) {
+        return new GameResponse(
+                data.id,
+                data.gameName,
+                data.createdByUsername,
+                data.status,
+                data.createdAt,
+                data.playerIds.size()
+        );
+    }
+
+    private static class GameData {
+        final long id;
+        final String gameName;
+        final long createdByUserId;
+        final String createdByUsername;
+        final LocalDateTime createdAt;
+        String status;
+        final Set<Long> playerIds = ConcurrentHashMap.newKeySet();
+
+        GameData(long id, String gameName, long createdByUserId, String createdByUsername) {
+            this.id = id;
+            this.gameName = gameName;
+            this.createdByUserId = createdByUserId;
+            this.createdByUsername = createdByUsername;
+            this.createdAt = LocalDateTime.now();
+            this.status = "WAITING";
+        }
     }
 }
